<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blackbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/adminTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/border_shape_general"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="All Events"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/adminFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminTitle"
        app:layout_constraintVertical_bias="0.437">

    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/fragmentBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imagesIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="Go to images fragment"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/all_images">

        </ImageButton>

        <ImageButton
            android:id="@+id/eventsIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="Go to events fragment"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/all_events">

        </ImageButton>

        <ImageButton
            android:id="@+id/usersIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="Go to users fragment"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/all_users">

        </ImageButton>

        <ImageButton
            android:id="@+id/notificationsIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="Go to notifications fragment"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/empty_notifs">

        </ImageButton>

        <ImageButton
            android:id="@+id/settingsIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="Go to notifications fragment"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/settings">

        </ImageButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>