<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="0dp">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/in_app_logo"
        app:layout_constraintBottom_toTopOf="@id/login_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        app:layout_constraintBottom_toTopOf="@id/login_information_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/login_information_container"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:background="@color/mainblue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button">

        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:hint="Email Address / Username"
            android:inputType="textEmailAddress"
            android:padding="6px"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="6px"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/remember_me_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:text="Remember Me"
            android:checked="false"
            android:buttonTint="@color/lightblue"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/register_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluebtn"
        app:layout_constraintTop_toBottomOf="@id/login_information_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_in_button"
        style="@style/SquareButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="@color/white"
        android:backgroundTint="@color/bluebtn"
        app:layout_constraintTop_toBottomOf="@id/login_information_container"
        app:layout_constraintStart_toEndOf="@id/register_page_button"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SquareButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>