...
        <TextView
            android:id="@+id/filterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="All Images"
            android:textColor="@color/UIBackground"
            android:textSize="18pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
            android:layout_marginTop="90dp"
            android:background="@color/UIBackground"
            app:layout_constraintTop_toBottomOf="@id/filterTitle"
            app:layout_constraintBottom_toBottomOf="parent">

            <ListView
                android:id="@+id/adminImagesListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="190dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
...
